# header-ai-runtime

./: .gitignore  CMakeLists.txt  DEVELOPMENT_LOG.md  README.md  VERSION_PLAN.md
include/: AnomalyDetector.h  FileDataSource.h  IDataSource.h  MetaConfig.h  Normalizer.h  OnnxAutoEncoder.h  ReconstructionError.h  SlidingWindow.h
src/: AnomalyDetector.cpp  FileDataSource.cpp  MetaConfig.cpp  Normalizer.cpp  OnnxAutoEncoder.cpp  ReconstructionError.cpp  SlidingWindow.cpp  main.cpp
tests/: runtime_core_tests.cpp
